--- a/server/package.json
+++ b/server/package.json
@@ -7,7 +7,7 @@
     "test": "cross-env NODE_OPTIONS=--experimental-vm-modules jest",
     "test:watch": "cross-env NODE_OPTIONS=--experimental-vm-modules jest --watch",
     "test:coverage": "cross-env NODE_OPTIONS=--experimental-vm-modules jest --coverage",
-    "start": "nodemon src/index.js",
+    "dev": "nodemon src/index.js",
     "seeder": "nodemon src/seed/index.js",
     "db:generate": "drizzle-kit generate",
     "db:push": "drizzle-kit push",
@@ -38,6 +38,8 @@
     "multer": "^2.0.2",
     "nodemailer": "^7.0.3",
     "pg": "^8.16.3",
+    "sharp": "^0.33.0",
+    "socket.io": "^4.8.1",
     "ulid": "^3.0.1",
     "validator": "^13.15.15",
     "winston": "^3.18.3",
