--- a/server/package.json
+++ b/server/package.json
@@ -36,6 +36,7 @@
     "lodash": "^4.17.21",
     "mime-types": "^3.0.1",
     "multer": "^2.0.2",
+    "node-fetch": "^3.3.2",
     "nodemailer": "^7.0.3",
     "pg": "^8.16.3",
     "sharp": "^0.33.0",
