--- a/server/package.json
+++ b/server/package.json
@@ -23,6 +23,7 @@
   "dependencies": {
     "@aws-sdk/client-s3": "^3.908.0",
     "@aws-sdk/lib-storage": "^3.908.0",
+    "@google/generative-ai": "^0.24.1",
     "bullmq": "^5.61.2",
     "cors": "^2.8.5",
     "crypto-js": "^4.2.0",
