--- a/server/package.json
+++ b/server/package.json
@@ -42,6 +42,8 @@
     "pg": "^8.16.3",
     "sharp": "^0.33.0",
     "socket.io": "^4.8.1",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.1",
     "ulid": "^3.0.1",
     "validator": "^13.15.15",
     "winston": "^3.18.3",
