Update .gitignore and enhance task management in tasks.json
- Added new entries to .gitignore for 'admin-dashboard-specs' and 'mermaid' to exclude unnecessary files from version control.
- Refined task descriptions and details in tasks.json for the Token Management System, improving clarity on implementation and testing strategies.
- Introduced subtasks for better organization of the Token Management System features, including signup bonus, balance API, transaction history, and admin top-up functionalities.
- Updated metadata timestamps to reflect recent changes.

--- a/server/.env.example
+++ b/server/.env.example
@@ -24,3 +24,13 @@ R2_PUBLIC_BASE_URL=https://pub-xxxxxxxxxxxxx.r2.dev
 
 # Upload Configuration
 UPLOAD_MAX_SIZE_MB=10
+
+# Redis Configuration (for BullMQ queues)
+REDIS_HOST=localhost
+REDIS_PORT=6379
+REDIS_PASSWORD=
+REDIS_DB=0
+
+# Google Gemini AI Configuration
+GOOGLE_AI_API_KEY=your-google-ai-api-key-here
+GEMINI_MODEL=gemini-2.5-flash-image
