--- a/server/package.json
+++ b/server/package.json
@@ -7,7 +7,7 @@
     "test": "cross-env NODE_OPTIONS=--experimental-vm-modules jest",
     "test:watch": "cross-env NODE_OPTIONS=--experimental-vm-modules jest --watch",
     "test:coverage": "cross-env NODE_OPTIONS=--experimental-vm-modules jest --coverage",
-    "dev": "nodemon src/index.js",
+    "start": "nodemon src/index.js",
     "seeder": "nodemon src/seed/index.js",
     "seed": "node src/db/seed.js",
     "db:seed": "node src/db/seed.js",
