Update start script in package.json for improved execution
- Changed the start script from nodemon to node for production use.
- Added a new dev script to utilize nodemon for development, enhancing the development workflow.

--- a/server/package.json
+++ b/server/package.json
@@ -7,7 +7,8 @@
     "test": "cross-env NODE_OPTIONS=--experimental-vm-modules jest",
     "test:watch": "cross-env NODE_OPTIONS=--experimental-vm-modules jest --watch",
     "test:coverage": "cross-env NODE_OPTIONS=--experimental-vm-modules jest --coverage",
-    "start": "nodemon src/index.js",
+    "start": "node src/index.js",
+    "dev": "nodemon src/index.js",
     "seeder": "nodemon src/seed/index.js",
     "seed": "node src/db/seed.js",
     "db:seed": "node src/db/seed.js",
