Update package.json to specify Node.js engine version
- Added "engines" field to package.json to require Node.js version 20.0.0 or higher, ensuring compatibility with the application.

--- a/client/package.json
+++ b/client/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-   "start": "next start --port 3000",
+    "start": "next start --port 3000",
     "lint": "eslint"
   },
   "dependencies": {
@@ -30,5 +30,8 @@
     "eslint-config-next": "16.0.1",
     "tailwindcss": "^4",
     "typescript": "^5"
+  },
+  "engines": {
+    "node": ">=20.0.0"
   }
 }
